--- a/index.html
+++ b/index.html
@@ -1,29 +1,52 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
-	</body>
+<head>
+    <link rel="stylesheet" href="styles.css">
+    <title>Jack Direct Ltd.</title>
+</head>
+<body>
+    <h1 style="font-stretch: condensed">Jack Direct - Jack Delivered To Your Door</h1>
+    <p style="text-align: center">An asset to any company!</h2>
+<p>This website offers exclusive deals on a skinny northern coder guy who is prepared to code until his eyes bleed.</p>
+<p>Since the dawn of the internet companies have needed people to hammer the keyboard night and day to deliver quality code. Jack is a new addition to the pool of Manchesters junior software developers. He is hungry for an opportunity to get stuck in and tackle code head on like a majestic rhino running into a brick wall.</p>
+
+<img style="float:left;" src="images/boxer.jpg" title="Artist's depiction of Jack" height="300" width="200">
+<img style="float:right;" src="images/codewall.png" title="There is much work to be done!" height="300" width="400";>
+
+<p style="text-align: center;">Product description:</p>
+<ul style="float:center;">
+    <li>Jack is approx six feet two inches tall (can reach high shelves)</li>
+    <li>Rangy build (doesn't take up a lot of room)</li> 
+    <li>Pale even in the summer (high-vis very safe in dark conditions)</li>
+    <li>Glass and metal augmentation to eyesight means he can see well at all times (in defiance of genetics)</li>
+    <li>Ability to swim (useful in event of flooding)</li>
+    <li>Two hands with working fingers and thumbs (good for coding)</li> 
+    <li>The dogged determination of a man who refuses to admit defeat in the face of adversity.</li>
+</ul>
+<hr>
+
+<p>Shipping Information:</p>
+<ul>
+    <li>Delivery time usually takes three to four weeks. (to settle affairs at current job like a gentleman)</li>
+    <li>Background in insurance and education: "I have other skilsets I can bring to the table from previous experience"</li>
+    <li>Can get to central Manchester quickly via public transport</li>
+    <li>Passionate about coding - learning a new skill around a full-time job isn't easy!</li>
+    <li>Comes equipped with English pre-installed and presentable clothing</li>
+</ul>
+<hr>
+
+<p>Praise and recognition for his usefulness:</p>
+<ul>
+    <li>"I do feel that he could be useful now and again." - Jack's wife</li>
+    <li>"Hire him so he stops complaining about not being a software developer." -Jack's friend Kevin</li>
+    <li>"You want to do what now? Don't you feel fulfilled working in this call centre?" -Jack's current boss</li>
+</ul>
+<br>
+<div class="wrapper">
+    <a href="Jack CV.pdf" src="Jack CV.pdf" download class="button">Product Documentation (CV)</a>
+</div>
+<br>
+<h2 style="color: goldenrod;">Contact - Telephone: 07799823543 Email: jack_elliott513@hotmail.co.uk</p>
+
+</body>
 </html>
