--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="/css/maincss.css">
+    <link rel="stylesheet" href="css/maincss">
     <title>Jack Direct Ltd.</title>
 </head>
 <body>
