--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </ul>
 <br>
 <div class="wrapper">
-    <a href="Jack CV.pdf" src="Jack CV.doc" download class="button">Product Documentation (CV)</a>
+    <a href="Jack CV.doc" download="Jack Elliott CV" class="button">Product Documentation (Download CV)</a>
 </div>
 <br>
 <h2 style="color: goldenrod;">Contact - Telephone: 07799823543 Email: jack_elliott513@hotmail.co.uk</p>
