--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Jack Direct Ltd.</title>
 </head>
 <body>
-    <h1 style="font-stretch: condensed">Jack Direct - Jack Elliott Delivered To Your Door</h1>
+    <h1 style="font-stretch: condensed">Jack Direct -<br>Jack Elliott Delivered To Your Door</h1>
     <p style="text-align: center">An asset to any company!</h2>
 <p>This website offers exclusive deals on a skinny northern coder guy who is prepared to code until his eyes bleed.</p>
 <p>Since the dawn of the internet companies have needed people to hammer the keyboard night and day to deliver quality code. Jack is a new addition to the pool of Manchesters junior software developers. He is hungry for an opportunity to get stuck in and tackle code head on like a majestic rhino running into a brick wall.</p>
