--- a/index.htm
+++ b/index.htm
@@ -10,6 +10,7 @@
                 <a href="catspin.htm">Spinning Cats</a>
                 <a href="tennis.htm">Tennis</a>
                 <a href="textadventure.htm">Text Adventure</a>
+                <a href="Battleships.html">Battleship game</a>
               </div>
 
     <h1 style="font-stretch: condensed">Jack Direct - Jack Delivered To Your Door</h1>
