--- a/textadventure.htm
+++ b/textadventure.htm
@@ -18,6 +18,7 @@
                 <a href="catspin.htm">Spinning Cats</a>
                 <a href="tennis.htm">Tennis</a>
                 <a href="textadventure.htm">Text Adventure</a>
+                <a href="Battleships.html">Battleship game</a>
               </div>
 
 <p>I made a little text adventure for people to play. It's quite silly but I had some fun with it.</p>
