--- a/Battleships.html
+++ b/Battleships.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
         <link rel="stylesheet" href="CSS/styles.css">        
         <title>Jack Direct Ltd.</title>
+        <meta charset ="utf-8">
 </head>
 
 <body>
@@ -14,13 +15,7 @@
                 <a href="Battleships.html">Battleship game</a>
               </div>
 
-<p>"Hire this man immediately" - Mark Zuckerberg (allegedly)</p>
-
-    <marquee behavior="scroll" direction="up" scrollamount=5;>Quality Code. Clean and Cheap.</marquee>
-
-<p>A productive time, well spent.</p>
-
-    <img class="cat" src="images/spincat.jpg" width="500" height="500"/>
-    
+<h1>Play Battleship!</h1>
+<script src="JS/battleship.js"></script>
 </body>            
 </html>
