--- a/index.htm
+++ b/index.htm
@@ -51,7 +51,7 @@
 </ul>
 <br>
 <div class="wrapper">
-    <a href="Jack Elliott CV 2019.doc" download class="button">Product Documentation (CV)</a>
+    <a href="JackElliottCV2019.docx" download class="button">Product Documentation (CV)</a>
 </div>
 <br>
 <h2 style="color: goldenrod;">Contact - Telephone: 07799823543 Email: jack_elliott513@hotmail.co.uk</p>
